--- a/pkg/msvc/msvc-2019/RetroArch-msvc2019.vcxproj
+++ b/pkg/msvc/msvc-2019/RetroArch-msvc2019.vcxproj
@@ -1576,6 +1576,7 @@
       <AdditionalOptions Condition="'$(Configuration)|$(Platform)'=='Debug QT|x64'">/bigobj %(AdditionalOptions)</AdditionalOptions>
       <AdditionalOptions Condition="'$(Configuration)|$(Platform)'=='Debug QT+CG|x64'">/bigobj %(AdditionalOptions)</AdditionalOptions>
     </ClCompile>
+    <ClCompile Include="..\..\..\Vanguard\VanguardWrapper.cpp" />
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="..\..\..\ui\drivers\qt\ui_qt_load_core_window.h">
