--- a/pkg/msvc/msvc-2019/RetroArch-msvc2019.vcxproj
+++ b/pkg/msvc/msvc-2019/RetroArch-msvc2019.vcxproj
@@ -1582,6 +1582,13 @@
     <ClCompile Include="..\..\..\Vanguard\UnmanagedWrapper.cpp" />
     <ClCompile Include="..\..\..\Vanguard\VanguardClient.cpp">
       <CompileAsManaged Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</CompileAsManaged>
+      <CompileAsManaged Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</CompileAsManaged>
+      <CompileAsManaged Condition="'$(Configuration)|$(Platform)'=='Release Cg|x64'">true</CompileAsManaged>
+      <CompileAsManaged Condition="'$(Configuration)|$(Platform)'=='Release QT|x64'">true</CompileAsManaged>
+      <CompileAsManaged Condition="'$(Configuration)|$(Platform)'=='Debug QT+CG|x64'">true</CompileAsManaged>
+      <CompileAsManaged Condition="'$(Configuration)|$(Platform)'=='Debug Cg|x64'">true</CompileAsManaged>
+      <CompileAsManaged Condition="'$(Configuration)|$(Platform)'=='Debug QT|x64'">true</CompileAsManaged>
+      <CompileAsManaged Condition="'$(Configuration)|$(Platform)'=='Release QT+CG|x64'">true</CompileAsManaged>
     </ClCompile>
     <ClCompile Include="..\..\..\Vanguard\VanguardWrapper.cpp" />
   </ItemGroup>
@@ -1930,31 +1937,6 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release Cg|Win32'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release Cg|x64'">true</ExcludedFromBuild>
     </CustomBuild>
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\..\..\RTCV\Source\Frontend\UI\UI.csproj">
-      <Project>{452f3f3c-6a87-4f67-8330-0f4a702f9951}</Project>
-      <Private>false</Private>
-    </ProjectReference>
-    <ProjectReference Include="..\..\..\..\RTCV\Source\Libraries\Common\Common.csproj">
-      <Project>{3fe50c3d-901f-4ea4-b378-1b180cb992e1}</Project>
-      <Private>false</Private>
-    </ProjectReference>
-    <ProjectReference Include="..\..\..\..\RTCV\Source\Libraries\CorruptCore\CorruptCore.csproj">
-      <Project>{18697fab-74b5-416b-a614-e226c387efad}</Project>
-      <Private>false</Private>
-    </ProjectReference>
-    <ProjectReference Include="..\..\..\..\RTCV\Source\Libraries\NetCore\NetCore.csproj">
-      <Project>{03c65d88-87e7-4f8f-ac12-8d120c32cc49}</Project>
-      <Private>false</Private>
-    </ProjectReference>
-    <ProjectReference Include="..\..\..\..\RTCV\Source\Libraries\PluginHost\PluginHost.csproj">
-      <Project>{c7af80c0-d7b9-4667-8fdc-baebb9582089}</Project>
-      <Private>false</Private>
-    </ProjectReference>
-    <ProjectReference Include="..\..\..\..\RTCV\Source\Libraries\Vanguard\Vanguard.csproj">
-      <Project>{f53ca6e5-655c-42fd-aa4e-f2947c4e0157}</Project>
-    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\Vanguard\Helpers.hpp" />
